Fixed collapsable all over

--- a/app/assets/stylesheets/rails.developer.css.scss
+++ b/app/assets/stylesheets/rails.developer.css.scss
@@ -129,3 +129,10 @@ a.show-misc-modal {
     border-bottom-color: #EBCCD1;
 }
 
+.show-selected {
+  color: #0000FF !important;
+  text-decoration: underline;
+  float: right;
+  padding-right: 10px;
+}
+
